--- a/StocksApp/StocksApp/Pages/MainPage.xaml
+++ b/StocksApp/StocksApp/Pages/MainPage.xaml
@@ -2,5 +2,17 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="StocksApp.Pages.MainPage">
-  <Button Text="Navigate" VerticalOptions="Center" HorizontalOptions="Center" Command = "{Binding NavigateCommand}"/>
+  <ContentPage.Content>
+    <Grid x:Name="grid" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" >
+      <Grid.RowDefinitions>
+        <RowDefinition Height="*"></RowDefinition>
+        <RowDefinition Height="*"></RowDefinition>
+      </Grid.RowDefinitions>
+      <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="*"></ColumnDefinition>
+      </Grid.ColumnDefinitions>
+      <Button Grid.Row="0" Grid.Column="0" Text="Details"  Command = "{Binding NavigateDetailsPage}"/>
+      <Button Grid.Row="1" Grid.Column="0" Text="Stock List" Command = "{Binding NavigateStockListPage}" />
+    </Grid>
+  </ContentPage.Content>
 </ContentPage>
